# Socrates_AI

./: .env  .gitignore  Dockerfile  docker-compose-backend.yml  docker-compose-database.yml  docker-compose.yml  ingest_pdfs_with_pages.py  requirements.txt  upload_pdfs.py
frontend/: index.html  package-lock.json  (+2 more)
src/: Dockerfile  bart.py  celerybeat-schedule  database.py  main.py  pyproject.toml  requirements.in
src/backend/: db.sqlite3
src/backend/backend/: settings.py
src/main/: celery.py  celerybeat-schedule
src/main/auth/: forms.py  urls.py  views.py
src/main/backend/: celery.py  settings.py  urls.py
src/main/bart/: admin.py  models.py  s3_client.py  serializers.py  storages.py  tasks.py  tests.py  urls.py  views.py
src/main/bart/migrations/: 0001_initial.py  0002_documentchunk_llm_summary.py  0002_remove_bartquery_response_bartquery_llm_response_and_more.py  0002_rename_page_number_book_page_num_book_embedding_and_more.py  0003_bartquery_remove_documentchunk_clip_l14_idx_and_more.py  0003_rename_page_num_book_page_number.py  0004_remove_book_source_id.py
src/main/documents/: minio_utils.py  models.py  serializers.py  storage.py  tasks.py  tests.py  urls.py  views.py
src/main/documents/migrations/: 0001_initial.py  0002_alter_document_created_at_and_more.py  0002_remove_document_status.py  0002_remove_documentchunk_content_documentpages_document_and_more.py  0003_alter_document_file_alter_document_title.py  0003_backfill_document_relations.py  0003_document_owner_minio_bucket.py  0004_alter_document_file.py  0004_alter_document_owner.py  0005_alter_document_options.py  0006_document_process_state.py  0007_alter_document_title.py
src/main/services/: admin.py  models.py
src/models/: auth.py  bart.py  query.py
src/routers/: auth.py  bart.py  health.py
(+61 files in other folders)
